fargate/tools/jenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deployment
  labels:
    app: app1-nginx
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      containers:
        - name: app1-nginx
          image: jenkins/jenkins:lts-jdk11
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "2048Mi"
              cpu: "1000m"
            limits:
              memory: "4096Mi"
              cpu: "2000m"               
          livenessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-clusterip-service
  labels:
    app: app1-nginx
  namespace: devops-tools

spec:
  type: ClusterIP
  selector:
    app: app1-nginx
  ports:
    - name: http
      port: 80
      targetPort: 8080
