fargate/tools/ingress.yml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fargate-profile-demo
  namespace: devops-tools
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: fargate-profile-demo
    alb.ingress.kubernetes.io/scheme: internet-facing

    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   

    ## SSL Settings
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:180789647333:certificate/d86de939-8ffd-410f-adce-0ce1f5be6e0d
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
    # SSL Redirect Setting
    #alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External DNS - For creating a Record Set in Route53
    #external-dns.alpha.kubernetes.io/hostname: fargate-profile-demo-501.ning-cicd.click

    # Target Type: IP (Defaults to Instance if not specified)
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: my-aws-ingress-class   # Ingress Class                  

  rules:
    - host: jenkins.ning-cicd.click
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
    - host: sonarqube.ning-cicd.click
      http:
        paths:                  
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app3-nginx-clusterip-service
                port: 
                  number: 80
    - host: argocd.ning-cicd.click
      http:
        paths:                  
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app3-nginx-clusterip-service
                port: 
                  number: 80


# 1. If  "spec.ingressClassName: my-aws-ingress-class" not specified, will reference default ingress class on this kubernetes cluster
# 2. Default Ingress class is nothing but for which ingress class we have the annotation `ingressclass.kubernetes.io/is-default-class: "true"`
